Fixed animation overflow and nav links

--- a/style.css
+++ b/style.css
@@ -1,32 +1,34 @@
 /* Material icons */
 .material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;  /* Preferred icon size */
-  display: inline-block;
-  line-height: 1;
-  text-transform: none;
-  letter-spacing: normal;
-  word-wrap: normal;
-  white-space: nowrap;
-  direction: ltr;
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
 
-  /* Support for all WebKit browsers. */
-  -webkit-font-smoothing: antialiased;
-  /* Support for Safari and Chrome. */
-  text-rendering: optimizeLegibility;
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
 
-  /* Support for Firefox. */
-  -moz-osx-font-smoothing: grayscale;
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
 
-  /* Support for IE. */
-  font-feature-settings: 'liga';
+    /* Support for IE. */
+    font-feature-settings: 'liga';
 }
 
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -35,8 +37,6 @@ body {
     height: 100vh;
 }
 
-main {
-}
 
 nav {
     text-transform: uppercase;
@@ -45,6 +45,7 @@ nav {
 #product-link {
     position: relative;
 }
+
 #product-list {
     position: absolute;
     top: 90%;
@@ -59,7 +60,7 @@ nav {
 }
 
 a {
-    position : relative;
+    position: relative;
 }
 
 .nav-link a::after {
@@ -70,14 +71,14 @@ a {
     width: 100%;
     height: 0.1em;
     background-color: hotpink;
-    opacity 1;
+    opacity: 1;
     transform: scale(0);
     transform-origin: center;
     transition: opacity 300ms, transform 300ms;
 }
 
 .nav-link a:hover::after,
-.nav-link a:focus::after{
+.nav-link a:focus::after {
     transform: scale(1);
 }
 
@@ -94,6 +95,7 @@ a {
 #body-container {
     display: grid;
 }
+
 .body-layer-1 {
     z-index: 1;
 }
@@ -102,7 +104,8 @@ a {
     z-index: 2;
 }
 
-.body-layer-1, .body-layer-2 {
+.body-layer-1,
+.body-layer-2 {
     grid-column: 1;
     grid-row: 1;
 }
@@ -130,15 +133,19 @@ a {
     0% {
         transform: translate(0, 0);
     }
+
     25% {
         transform: translate(10%, 10%);
     }
+
     50% {
         transform: translate(-20%, 35%);
     }
+
     75% {
         transform: translate(10%, 25%);
     }
+
     100% {
         transform: translate(0, 0);
     }
@@ -148,33 +155,42 @@ a {
     0% {
         transform: translate(0, 0);
     }
+
     25% {
-        transform: translate(-50%, 70%);
+        transform: translate(-50%, 15%);
     }
+
     50% {
-        transform: translate(-65%, 25%);
+        transform: translate(-65%, 5%);
     }
+
     75% {
-        transform: translate(-30%, 80%);
+        transform: translate(-30%, 10%);
     }
+
     100% {
         transform: translate(0, 0);
     }
+
 }
 
 @keyframes move-three {
     0% {
         transform: translate(0, 0);
     }
+
     25% {
         transform: translate(-80%, 50%);
     }
+
     50% {
         transform: translate(20%, -80%);
     }
+
     75% {
         transform: translate(-60%, -20%);
     }
+
     100% {
         transform: translate(0, 0);
     }
@@ -184,15 +200,19 @@ a {
     0% {
         transform: translate(0, 0);
     }
+
     25% {
         transform: translate(-45%, 10%);
     }
+
     50% {
         transform: translate(-30%, -50%);
     }
+
     75% {
         transform: translate(-25%, 5%);
     }
+
     100% {
         transform: translate(0, 0);
     }
@@ -305,6 +325,34 @@ footer {
 /* mobile */
 @media screen and (max-width: 600px) {
 
+    /* Nav */
+    #nav-mobile-button-container {
+        display: block;
+        width: fit-content;
+        margin: auto;
+    }
+
+    #nav-button {
+        margin: auto;
+    }
+
+    #nav-button > span {
+        border: 3px solid #000;
+        border-radius: 30%
+    }
+
+    .hide-nav {
+        display: none;
+    }
+
+    .show-nav {
+        display: block;
+    }
+
+    .nav-link {
+        padding: 5px;
+    }
+
     /* Home Page */
     #img-container-parent {
         width: 100%;
@@ -339,9 +387,6 @@ footer {
         width: 90%;
     }
 
-    .link-text {
-        display: none;
-    }
 
     #faq-container {
         width: 100%;
